--- a/style.css
+++ b/style.css
@@ -322,4 +322,13 @@ footer p, footer a {
         display: flex;
         margin: auto;
     }
+    header {
+        background-image: none;
+        height: auto;
+    }
+    #logotagline > h2 {
+        color: #805ea0;
+        font-size: 10px;
+    }
+
 }
