--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ footer p, footer a {
 
 .small_col {
     max-width: 1200px;
-    margin: 20px, auto;
+    margin: auto;
 }
 
 .button_row {
@@ -166,6 +166,7 @@ footer p, footer a {
 .button_row button {
     margin-right: 20px;
     margin-left: 20px;
+    margin-bottom: 20px;
 }
 
 .center {
