--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ footer p, footer a {
     transition: 0.3s;
     cursor: pointer; 
     width: 400px;
+    max-width: 100%;
     height: 400px;
     margin: auto;
     margin-left: 40px;
@@ -185,6 +186,7 @@ footer p, footer a {
 .divbutton:hover {
     background-color: #4b3e36;
     transform: scale(1.1);
+    color: white;
     
 }
 
