--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 html {
     height: 100%;
-    overflow: hidden;
+    overflow: hidden; 
 }
 
 body { 
@@ -18,8 +18,14 @@ body {
 }
 
 
+
+
 header {
     height: 50%;
+} 
+
+.header-background {
+    height: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(assets/Hero.png);
     background-position:  right 15% ;
     background-repeat: no-repeat;
@@ -27,8 +33,49 @@ header {
     position: relative;
     font-size: x-large;
     z-index: -1;
-    background-attachment: fixed;   
-    
+    background-attachment: fixed;  
+}
+
+nav {
+    height: 0px;
+    background-color: #4b3e36;
+    position: sticky;
+    top: -0; 
+    margin: 0;
+    padding: 0;
+    z-index: 2;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+nav ul {
+    display: flex;
+    height: 40px;
+    background-color: #4b3e36;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+  
+}
+
+nav li {
+    list-style-type: none;
+    padding: 0px 20px;
+    color: #ffff;
+    transition: all .2s ease-in-out;    
+}
+
+nav li:hover {
+    transform: scale(1.5);
+}
+
+nav a {
+    text-decoration: none;
+    font-size: 1.2em;
 }
 
 main {
@@ -36,15 +83,17 @@ main {
     width: 100%;
     position: relative;
     z-index: 1;
-    max-width: 1500px;
+    
     margin-right: auto;
     margin-left: auto;
-    
     
 }
 
 section {
     padding: 10px 40px;
+    max-width: 1500px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 
@@ -390,6 +439,10 @@ footer p, footer a {
         background-image: none;
         height: auto;
     }
+    .header-background {
+        background-image: none;
+        height: auto;
+    }
     #logotagline > h5 {
         color: #805ea0;
         font-size: 10px;
@@ -398,6 +451,8 @@ footer p, footer a {
     .button_row button {
         margin-bottom: 20px;
     }
-    
+    .flex_foot {
+        display: none;
+    }
     
 }
